--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,18 @@
 <resources>
     <string name="app_name">Genshin</string>
+    <string name="sort">Сортировать</string>
+    <string name="about_title">О проекте</string>
+    <string name="about_content">По задумке это небольшой и уютненький сайт, где можно найти всякое интересное по игре Genshin Impact. Сайт не представляет собой прям базу, а скорее всего что-то типа собрания интересных и иногда полезных фактов и данных. Всем кто хочет связаться и пообщаться по поводу сайта или о других мелочах:\nPrezident123#9662\nПо поводу APK: Josty#0626</string>
+    <string name="rights">Все права на материалы показанные на сайте принадлежат компании miHoYo. Информация на сайте взята из официальных источников miHoYo. Если нет, то внизу будет ссылка на источник.</string>
+    <string name="description">Эола 5*\nРозария 4*\nНоэль 4*\nБеннет 4*</string>
+    <string name="title">Рождённая морской волной (2.3)</string>
+
+    <string-array name="sorting">
+        <item>От редких к менее</item>
+        <item>От менее редких</item>
+        <item>По алфавиту</item>
+        <item>С конца алфавита</item>
+        <item>По стихиям</item>
+        <item>По ID в БД</item>
+    </string-array>
 </resources>
