--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="about_title">О проекте</string>
     <string name="about_content">По задумке это небольшой и уютненький сайт, где можно найти всякое интересное по игре Genshin Impact. Сайт не представляет собой прям базу, а скорее всего что-то типа собрания интересных и иногда полезных фактов и данных. Всем кто хочет связаться и пообщаться по поводу сайта или о других мелочах:\nPrezident123#9662\nПо поводу APK: Josty#0626</string>
     <string name="rights">Все права на материалы показанные на сайте принадлежат компании miHoYo. Информация на сайте взята из официальных источников miHoYo. Если нет, то внизу будет ссылка на источник.</string>
-    <string name="description">Эола 5*\nРозария 4*\nНоэль 4*\nБеннет 4*</string>
+    <string name="description">Описание</string>
     <string name="from_rare_to_less">От редких к менее</string>
     <string name="from_less_rare">От менее редких</string>
     <string name="alphabetically">По алфавиту</string>
@@ -17,6 +17,8 @@
     <string name="weapon">Оружие:</string>
     <string name="gender">Пол:</string>
     <string name="birthday">День рождения:</string>
+    <string name="change_theme">Сменить тему</string>
+    <string name="full_name">Полное имя:</string>
 
     <string-array name="sorting">
         <item>От редких к менее</item>
