--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,4 +61,5 @@
     <string name="birthday">День рождения</string>
     <string name="region">Регион</string>
     <string name="affiliation">Принадлежность</string>
+    <string name="sorting">Сортировка</string>
 </resources>
